fixed missing csrf token

--- a/chcloud/templates/base_layout.html
+++ b/chcloud/templates/base_layout.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     {% if current_user is not none %}
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu_content" aria-controls="menu_content" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
